styles.css
body {
  background: url("/Images/backpaper.jpg") no-repeat center center fixed;
  /* Photo by Annie Spratt on Unsplash */
  -webkit-background-size: cover;
  -moz-background-size: cover;
  background-size: cover;
  -o-background-size: cover;
}

.pirate {
}

/* #container {
    font-family: sans-serif, Arial;
}       /*this is a comment 

#flex-fill {
  background-image: url("/backblur.jpg");
  min-height: 100vh;
  background-repeat: no-repeat;
  background-size: cover;
}

h1 {
    color: #00008b;
    font-size: 200%;
}

p {
  font-size: 120%;
  line-height: 1.75;
}
a {
  color: #8B008B;
  text-decoration: none;
}

.right {
  float: right;
}

img.pirate {
  border-width: 10px;
  border-style: solid;
  border-color: #ffffff;
  box-shadow: 5px 5px 15px rgba(0,0,0,.3)
}

#header {
  text-align: center;
}

#body {
    width: 70%;
    text-align: center;
    margin: auto;
    padding-bottom: 15px;
    border-radius: 40px;
    box-shadow: 5px 5px 15px rgba(0,0,0,.3)
}

#email {
    width: 55%;
    margin: auto;
    text-align: center;
    background-color: #e88564;
    clear: both;
    border-radius: 30px;
    padding: 2px;
    box-shadow: 5px 5px 15px rgba(0,0,0,.5)
}

#footer {
    text-align: center;
    padding: 10px;
    font-size: 50%;
} */

